# GenAI-learning

./: README.md  main.py  pyproject.toml
apps/: 1_QNA_bot.py  3_basic_memory_with_langchain.ipynb
notebooks/: 0_basic_lanchain_openai.ipynb  2_prompt_chains.ipynb  gemini_chat.ipynb
